# async-request-script

./: Cargo.toml  README.md
src/: main.rs
