[package]
name = "request-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.114"
tokio = { version = "1.21.1", features = ["full"] }
